# wing-note

./: .gitignore  README.md  package-lock.json
back-end/: README.md  main.py  pyproject.toml  test.py
doctor-portal/: package-lock.json  package.json
doctor-portal/src/app/: layout.tsx  page.tsx
doctor-portal/src/app/patient/[id]/: page.tsx
doctor-portal/src/app/visit/[id]/: page.tsx
doctor-portal/src/components/: EHRForm.tsx
doctor-portal/src/components/ui/: spinner.tsx
firmware/: firmware.c
patient-portal/: config.tsx  package-lock.json  package.json
patient-portal/src/app/: layout.tsx  page.tsx
patient-portal/src/app/api/chat/: route.ts
patient-portal/src/app/appointment/[id]/: page.tsx
patient-portal/src/app/profile/: page.tsx
patient-portal/src/components/: AppointmentDetails.tsx  AppointmentList.tsx  BottomNav.tsx  ChatComponent.tsx  NotificationList.tsx  VisitDetails.tsx
