[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=3.10.0",
    "fastapi[standard]>=0.115.8",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.1",
    "supabase>=2.13.0",
    "websockets>=14.2",
]
