[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=3.10.0",
    "fastapi[standard]>=0.115.8",
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "supabase>=2.13.0",
    "websockets>=14.2",
]
